[package]
name = "inherent-pub"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
documentation = "https://idanarye.github.io/rust-inherent-pub/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.15", features = ["full", "extra-traits"]}
quote = "0.6.9"
