[package]
name = "inherent-pub"
description = "Mark methods in `impl Trait for Type` blocks inherent to the type"
version = "0.2.0"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT"
repository = "https://github.com/idanarye/rust-inherent-pub"
documentation = "https://idanarye.github.io/rust-inherent-pub/"
readme = "README.md"
keywords = ["inherent"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "0.15.15", features = ["full"]}
quote = "0.6.9"
