[package]
name = "inherent-pub"
description = "Mark methods in `impl Trait for Type` blocks inherent to the type"
version = "0.2.1"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/idanarye/rust-inherent-pub"
documentation = "https://idanarye.github.io/rust-inherent-pub/"
readme = "README.md"
keywords = ["inherent"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", features = ["full", "extra-traits"] }
quote = "1.0.2"

[dev-dependencies]
async-trait = "0.1.22"
async-std = { version = "1.4.0", features = ["attributes"] }
